【开发】通用链表的开发

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,11 +1,14 @@
 include ../Make.defines
 
-PROGS =	client
+PROGS =	../structures/link_list.o
 
 all:	${PROGS}
 
 client:	client.o
 		${CC} ${CFLAGS} -o $@ client.o ${LIBS}
+
+test_list:	test_list.o
+		${CC} ${CFLAGS} -o $@ test_list.o ${PROGS} ${LIBS}
 
 clean:
 		rm -f ${PROGS} ${CLEANFILES}
