【提交】test_packet.c 测试用例 【更新】修复packet.h packet.c 中部分bug

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,7 @@
 include ../Make.defines
 
 PROGS =	../structures/link_list.o
+PROGS1 = ../gateway/packet.o
 
 all:	${PROGS}
 
@@ -9,6 +10,9 @@ client:	client.o
 
 test_list:	test_list.o
 		${CC} ${CFLAGS} -o $@ test_list.o ${PROGS} ${LIBS}
+
+test_packet:	test_packet.o
+		${CC} ${CFLAGS} -o $@ test_packet.o ${PROGS1} ${LIBS}
 
 clean:
 		rm -f ${PROGS} ${CLEANFILES}
