--- a/test/Makefile
+++ b/test/Makefile
@@ -2,6 +2,7 @@ include ../Make.defines
 
 PROGS =	../structures/link_list.o
 PROGS1 = ../gateway/packet.o
+PROGS2 =	../structures/double_link_list.o
 
 all:	${PROGS}
 
@@ -13,6 +14,9 @@ test_list:	test_list.o
 
 test_packet:	test_packet.o
 		${CC} ${CFLAGS} -o $@ test_packet.o ${PROGS1} ${LIBS}
+
+test_double_list:	test_double_list.o
+		${CC} ${CFLAGS} -o $@ test_double_list.o ${PROGS2} ${LIBS}
 
 clean:
 		rm -f ${PROGS} ${CLEANFILES}
