--- a/test/Makefile
+++ b/test/Makefile
@@ -3,6 +3,10 @@ include ../Make.defines
 PROGS =	../structures/link_list.o
 PROGS1 = ../gateway/packet.o
 PROGS2 =	../structures/double_link_list.o
+PROGS1 = ../gateway/packet.o
+PROGS2 = ../gateway/buffer_h.o
+
+CLEANPROCS = client test_list test_packet test_double_list test_buffer
 
 all:	${PROGS}
 
@@ -18,5 +22,8 @@ test_packet:	test_packet.o
 test_double_list:	test_double_list.o
 		${CC} ${CFLAGS} -o $@ test_double_list.o ${PROGS2} ${LIBS}
 
+test_buffer:	test_buffer.o
+		${CC} ${CFLAGS} -o $@ test_buffer.o ${PROGS2} ${LIBS}
+
 clean:
-		rm -f ${PROGS} ${CLEANFILES}
+		rm -f *.o ${CLEANPROCS} ${CLEANFILES}
