--- a/gateway/Makefile
+++ b/gateway/Makefile
@@ -2,7 +2,7 @@ include ../Make.defines
 
 OBJS = gateway.o engine.o server.o engine_manager.o acceptor.o \
 		fdevent.o fdevent_linux_sysepoll.o epoll.o packet.o signal_h.o error_h.o \
-		buffer_h.o
+		buffer_h.o connect.o
 
 # OBJS = ../event/*.o
 STRUCTURES = ../structures/*.o
